--- a/Reto3Tema5/Reto3Tema5.html
+++ b/Reto3Tema5/Reto3Tema5.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reto 3 Tema 5 A</title>
+    <link rel="stylesheet" href="Reto3Tema5.css">
 </head>
 <body>
     <h1>Formulario API Stars Wars</h1>
